Added support for preloads and preload fragments

--- a/LocoSwap.Language/LocoSwap.Language.csproj
+++ b/LocoSwap.Language/LocoSwap.Language.csproj
@@ -50,6 +50,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <CustomToolNamespace>LocoSwap.Language</CustomToolNamespace>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
